--- a/public/index.html
+++ b/public/index.html
@@ -140,7 +140,133 @@
 <!-- LPS06: Plans & Pricing -->
 <section id="pricing" class="py-12 md:py-20 px-6 bg-gray-50">
     <div class="max-w-6xl mx-auto">
-        <!-- contenido -->
+        <div class="relative isolate px-6 py-24 sm:py-32 lg:px-8">
+            <div class="absolute inset-x-0 -top-3 -z-10 transform-gpu overflow-hidden px-36 blur-3xl" aria-hidden="true">
+                <div class="mx-auto aspect-1155/678 w-[72.1875rem] bg-linear-to-tr from-[#ff80b5] to-[#9089fc] opacity-30" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
+            </div>
+            <div class="mx-auto max-w-4xl text-center">
+                <h2 id="pricing-title" class="subtitle-1 font-semibold text-accent">Plans & Pricing</h2>
+                <p id="pricing-title-call-to-action" class="mt-2 text-5xl font-semibold tracking-tight text-balance text-gray-900 sm:text-6xl">Choose the right plan for you</p>
+            </div>
+            <p id="pricing-description" class="mx-auto mt-6 max-w-2xl text-center text-lg font-medium text-pretty text-gray-600 sm:text-xl/8">Optimize the management of educational and sports academies through an all-in-one platform that streamlines administration and improves operational efficiency.</p>
+
+            <!-- Cambios principales aquí: grid grid-cols-1 md:grid-cols-3 y gap-8 -->
+            <div class="mx-auto mt-16 grid max-w-6xl grid-cols-1 md:grid-cols-3 gap-8 sm:mt-20">
+                <!-- Primera tarjeta: Essentials -->
+                <div id="essential-card" class="rounded-3xl bg-white/60 p-8 ring-1 ring-gray-900/10 hover:shadow-lg transition duration-300">
+                    <h3 id="essential-title" class="text-base/7 font-semibold text-accent">Essentials</h3>
+                    <p class="mt-4 flex items-baseline gap-x-2">
+                        <span id="essential-price" class="text-5xl font-semibold tracking-tight text-gray-900">$29.90</span>
+                        <span id="essential-price_per_month" class="text-base text-gray-500">/month</span>
+                    </p>
+                    <p id="starter-description" class="mt-6 text-base/7 text-gray-600">For small academies.</p>
+                    <ul id="essential-features" role="list" class="mt-8 space-y-3 text-sm/6 text-gray-600 sm:mt-10">
+                        <li class="flex gap-x-3">
+                            <svg class="h-6 w-5 flex-none text-accent" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                                <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 0 1 .143 1.052l-8 10.5a.75.75 0 0 1-1.127.075l-4.5-4.5a.75.75 0 0 1 1.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 0 1 1.05-.143Z" clip-rule="evenodd" />
+                            </svg>
+                            <span id="essential-features-feature_1">1 location</span>
+                        </li>
+                        <li class="flex gap-x-3">
+                            <svg class="h-6 w-5 flex-none text-accent" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                                <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 0 1 .143 1.052l-8 10.5a.75.75 0 0 1-1.127.075l-4.5-4.5a.75.75 0 0 1 1.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 0 1 1.05-.143Z" clip-rule="evenodd" />
+                            </svg>
+                            <span id="essential-features-feature_2">Up to 100 students</span>
+                        </li>
+                        <li class="flex gap-x-3">
+                            <svg class="h-6 w-5 flex-none text-accent" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                                <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 0 1 .143 1.052l-8 10.5a.75.75 0 0 1-1.127.075l-4.5-4.5a.75.75 0 0 1 1.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 0 1 1.05-.143Z" clip-rule="evenodd" />
+                            </svg>
+                            <span id="essential-features-feature_3">Up to 10 teachers</span>
+                        </li>
+                        <li class="flex gap-x-3">
+                            <svg class="h-6 w-5 flex-none text-accent" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                                <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 0 1 .143 1.052l-8 10.5a.75.75 0 0 1-1.127.075l-4.5-4.5a.75.75 0 0 1 1.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 0 1 1.05-.143Z" clip-rule="evenodd" />
+                            </svg>
+                            <span id="essential-features-feature_4">Enrollment and payment management</span>
+                        </li>
+                    </ul>
+                    <a href="#" aria-describedby="tier-starter" class="mt-8 block rounded-md px-3.5 py-2.5 text-center text-sm font-semibold text-accent ring-1 ring-indigo-200 ring-inset  hover:ring-indigo-300 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 sm:mt-10" id="get-started">Get started today</a>
+                </div>
+
+                <!-- Segunda tarjeta: Pro -->
+                <div id="pro-card" class="rounded-3xl bg-white/60 p-8 ring-1 ring-gray-900/10 shadow-xl transform scale-105 z-10">
+                    <div class="absolute -top-4 inset-x-0 flex justify-center">
+                        <span class="inline-flex items-center rounded-full bg-secondary-alt-4 px-3 py-1 text-xs font-medium text-primary" id="most-popular">Most Popular</span>
+                    </div>
+                    <h3 id="pro-title" class="text-base/7 font-semibold text-accent">Pro</h3>
+                    <p class="mt-4 flex items-baseline gap-x-2">
+                        <span id="pro-price" class="text-5xl font-semibold tracking-tight text-gray-900">$59.90</span>
+                        <span class="text-base text-gray-500" id="pro-price-per-month">/month</span>
+                    </p>
+                    <p id="pro-description" class="mt-6 text-base/7 text-gray-600">For medium-sized academies.</p>
+                    <ul role="list" class="mt-8 space-y-3 text-sm/6 text-gray-600 sm:mt-10" id="hobby-features">
+                        <li class="flex gap-x-3">
+                            <svg class="h-6 w-5 flex-none text-accent" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true" id="feature-1">
+                                <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 0 1 .143 1.052l-8 10.5a.75.75 0 0 1-1.127.075l-4.5-4.5a.75.75 0 0 1 1.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 0 1 1.05-.143Z" clip-rule="evenodd" />
+                            </svg>
+                            <span id="pro-features-feature_1">Up to 2 locations</span>
+                        </li>
+                        <li class="flex gap-x-3">
+                            <svg class="h-6 w-5 flex-none text-accent" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true" id="feature-2">
+                                <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 0 1 .143 1.052l-8 10.5a.75.75 0 0 1-1.127.075l-4.5-4.5a.75.75 0 0 1 1.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 0 1 1.05-.143Z" clip-rule="evenodd" />
+                            </svg>
+                            <span id="pro-features-feature_2">Up to 500 students</span>
+                        </li>
+                        <li class="flex gap-x-3">
+                            <svg class="h-6 w-5 flex-none text-accent" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true" id="feature-2">
+                                <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 0 1 .143 1.052l-8 10.5a.75.75 0 0 1-1.127.075l-4.5-4.5a.75.75 0 0 1 1.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 0 1 1.05-.143Z" clip-rule="evenodd" />
+                            </svg>
+                            <span id="pro-features-feature_3">Up to 50 teachers</span>
+                        </li>
+                        <li class="flex gap-x-3">
+                            <svg class="h-6 w-5 flex-none text-accent" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true" id="feature-3">
+                                <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 0 1 .143 1.052l-8 10.5a.75.75 0 0 1-1.127.075l-4.5-4.5a.75.75 0 0 1 1.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 0 1 1.05-.143Z" clip-rule="evenodd" />
+                            </svg>
+                            <span id="pro-features-feature_4">Enrollment and payment management</span>
+                        </li>
+                    </ul>
+                    <a href="#" aria-describedby="tier-hobby" class="mt-8 block rounded-md px-3.5 py-2.5 text-center text-sm font-semibold text-accent ring-1 ring-indigo-200 ring-inset hover:ring-indigo-300 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 sm:mt-10" id="pro-get-started">Get started today</a>
+                </div>
+
+                <!-- Tercera tarjeta: Elite -->
+                <div id="elite-card" class="rounded-3xl bg-primary-8 p-8 shadow-2xl ring-1 ring-gray-900/10">
+                    <h3 id="elite-title" class="text-base/7 font-semibold text-accent-4">Elite</h3>
+                    <p class="mt-4 flex items-baseline gap-x-2">
+                        <span id="elite-price" class="text-5xl font-semibold tracking-tight text-white">$199.90</span>
+                        <span id ="elite-price_per_month" class="text-base text-gray-400">/month</span>
+                    </p>
+                    <p id="elite-description" class="mt-6 text-base/7 text-gray-300">For large academies.</p>
+                    <ul role="list" class="mt-8 space-y-3 text-sm/6 text-gray-300 sm:mt-10" id="enterprise-features">
+                        <li class="flex gap-x-3">
+                            <svg class="h-6 w-5 flex-none text-accent-2" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                                <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 0 1 .143 1.052l-8 10.5a.75.75 0 0 1-1.127.075l-4.5-4.5a.75.75 0 0 1 1.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 0 1 1.05-.143Z" clip-rule="evenodd" />
+                            </svg>
+                            <span id="elite-features-feature_1">Up to 2000 students</span>
+                        </li>
+                        <li class="flex gap-x-3">
+                            <svg class="h-6 w-5 flex-none text-accent-2" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                                <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 0 1 .143 1.052l-8 10.5a.75.75 0 0 1-1.127.075l-4.5-4.5a.75.75 0 0 1 1.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 0 1 1.05-.143Z" clip-rule="evenodd" />
+                            </svg>
+                            <span id="elite-features-feature_2">Up to 200 teachers</span>
+                        </li>
+                        <li class="flex gap-x-3">
+                            <svg class="h-6 w-5 flex-none text-accent-2" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                                <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 0 1 .143 1.052l-8 10.5a.75.75 0 0 1-1.127.075l-4.5-4.5a.75.75 0 0 1 1.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 0 1 1.05-.143Z" clip-rule="evenodd" />
+                            </svg>
+                            <span id="elite-features-feature_3">Priority support</span>
+                        </li>
+                        <li class="flex gap-x-3">
+                            <svg class="h-6 w-5 flex-none text-accent-2" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                                <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 0 1 .143 1.052l-8 10.5a.75.75 0 0 1-1.127.075l-4.5-4.5a.75.75 0 0 1 1.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 0 1 1.05-.143Z" clip-rule="evenodd" />
+                            </svg>
+                            <span id="elite-features-feature_4">Enrollment and payment management</span>
+                        </li>
+                    </ul>
+                    <a href="#" aria-describedby="tier-enterprise" class="mt-8 block rounded-md bg-accent px-3.5 py-2.5 text-center text-sm font-semibold text-white shadow-xs  focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-500 sm:mt-10" id="elite-get-started">Get started today</a>
+                </div>
+            </div>
+        </div>
     </div>
 </section>
 
