--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <!-- Estilos personalizados -->
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/hero.css">
+    <link rel="stylesheet" href="css/testimonials.css">
 </head>
 <body class="bg-white text-gray-800">
 
@@ -123,10 +124,54 @@
     </div>
 </section>
 
-<!-- LPS04: Testimonials -->
-<section id="testimonials" class="py-12 md:py-20 px-6 bg-gray-50">
-    <div class="max-w-6xl mx-auto">
-        <!-- contenido -->
+<section id="testimonials" class="bg-gray-100 py-20 px-4 md:px-8">
+    <!-- Título de la sección -->
+    <h2 id="testimonial-title" class="text-4xl md:text-5xl font-bold text-center text-blue-800 mb-16">
+
+    </h2>
+
+    <!-- Contenedor de testimonios -->
+    <div class="grid gap-10 md:grid-cols-3 max-w-6xl mx-auto">
+        <!-- Testimonio 1 -->
+        <div id="testimonial-1" class="testimonial bg-white p-6 rounded-2xl shadow">
+            <div class="text-gray-600 italic testimonial-text mb-4">
+                <!-- Texto -->
+            </div>
+            <div class="flex items-center gap-4">
+                <img class="testimonial-img w-12 h-12 rounded-full object-cover" src="" alt="">
+                <div>
+                    <p class="testimonial-name font-semibold text-gray-800"></p>
+                    <p class="testimonial-position text-sm text-gray-500"></p>
+                    <div class="testimonial-rating text-yellow-500 text-sm"></div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Testimonio 2 -->
+        <div id="testimonial-2" class="testimonial bg-white p-6 rounded-2xl shadow">
+            <div class="text-gray-600 italic testimonial-text mb-4"></div>
+            <div class="flex items-center gap-4">
+                <img class="testimonial-img w-12 h-12 rounded-full object-cover" src="" alt="">
+                <div>
+                    <p class="testimonial-name font-semibold text-gray-800"></p>
+                    <p class="testimonial-position text-sm text-gray-500"></p>
+                    <div class="testimonial-rating text-yellow-500 text-sm"></div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Testimonio 3 -->
+        <div id="testimonial-3" class="testimonial bg-white p-6 rounded-2xl shadow">
+            <div class="text-gray-600 italic testimonial-text mb-4"></div>
+            <div class="flex items-center gap-4">
+                <img class="testimonial-img w-12 h-12 rounded-full object-cover" src="" alt="">
+                <div>
+                    <p class="testimonial-name font-semibold text-gray-800"></p>
+                    <p class="testimonial-position text-sm text-gray-500"></p>
+                    <div class="testimonial-rating text-yellow-500 text-sm"></div>
+                </div>
+            </div>
+        </div>
     </div>
 </section>
 
