--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
     <!-- Estilos personalizados -->
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/hero.css">
+    <link rel="stylesheet" href="css/about-us.css">
+
 </head>
 <body class="bg-white text-gray-800">
 
@@ -134,8 +136,54 @@
 <section id="about-us" class="py-12 md:py-20 px-6 bg-gray-50">
     <div class="max-w-6xl mx-auto">
         <!-- contenido -->
+        <p id="about-subtitle" class="text-sm text-blue-600 font-medium mb-2">About us</p>
+
+
+        <h2 id="text-about1" class="text-3xl font-bold text-blue-800 mb-4">
+            Simplify and grow your education business
+        </h2>
+
+        <p id="text-about2" class="text-lg text-gray-600 mb-8">
+            Automate enrollments, schedules, payments, and student tracking with an all-in-one platform designed for your academy.
+        </p>
+
+
+        <div class="team-container flex flex-wrap justify-center gap-6">
+            <!-- Miembro 1 -->
+            <div class="team-member text-center">
+                <img src="assets/img/salim.jpg" alt="Selim Ramirez" class="w-24 h-24 rounded-full mx-auto mb-2 object-cover">
+                <p class="font-semibold text-gray-800">Salim Ramirez</p>
+                <p class="text-sm text-gray-500">Team Leader</p>
+            </div>
+            <!-- Miembro 2 -->
+            <div class="team-member text-center">
+                <img src="assets/img/rafael.jpg" alt="Rafael Dominguez" class="w-24 h-24 rounded-full mx-auto mb-2 object-cover">
+                <p class="font-semibold text-gray-800">Rafael Dominguez</p>
+                <p class="text-sm text-gray-500">Member 1</p>
+            </div>
+            <!-- Miembro 3 -->
+            <div class="team-member text-center">
+                <img src="assets/img/diego.jpg" alt="Diego Vilca" class="w-24 h-24 rounded-full mx-auto mb-2 object-cover">
+                <p class="font-semibold text-gray-800">Diego Vilca</p>
+                <p class="text-sm text-gray-500">Member 2</p>
+            </div>
+            <!-- Miembro 4 -->
+            <div class="team-member text-center">
+                <img src="assets/img/paul.jpg" alt="Paul Sulca" class="w-24 h-24 rounded-full mx-auto mb-2 object-cover">
+                <p class="font-semibold text-gray-800">Paul Sulca</p>
+                <p class="text-sm text-gray-500">Member 3</p>
+            </div>
+            <!-- Miembro 5 -->
+            <div class="team-member text-center">
+                <img src="assets/img/daniel.jpg" alt="Daniel Crispin" class="w-24 h-24 rounded-full mx-auto mb-2 object-cover">
+                <p class="font-semibold text-gray-800">Daniel Crispin</p>
+                <p class="text-sm text-gray-500">Member 4</p>
+            </div>
+        </div>
+
     </div>
 </section>
+
 
 <!-- LPS06: Plans & Pricing -->
 <section id="pricing" class="py-12 md:py-20 px-6 bg-gray-50">
