--- a/public/index.html
+++ b/public/index.html
@@ -113,6 +113,64 @@
 <section id="about-product" class="py-12 md:py-20 px-6 bg-gray-50">
     <div class="max-w-6xl mx-auto">
         <!-- contenido -->
+        <p id="about-subtitle" class="text-primary-3 font-medium text-lg mb-2 text-center">About the product</p>
+        <h1 id="about-title" class="h1 text-primary-1 mb-4 leading-tight text-center" >
+            Everything that you need to know about Demy
+        </h1>
+        <p id="about-description" class="body-1 text-secondary-dark-2 mb-6 text-center">
+            Demy will be your best friend in the organization of your academy, are you ready to know the features?:
+        </p>
+        <!--listado de las características -->
+        <dl class="grid max-w-xl grid-cols-1 gap-x-8 gap-y-10 lg:max-w-none lg:grid-cols-2 lg:gap-y-16">
+            <div class="relative pl-16">
+                <dt  class="text-base/7 font-semibold text-gray-900">
+                    <div class="absolute top-0 left-0 flex size-10 items-center justify-center rounded-lg bg-blue-800">
+                        <svg class="size-6 text-white" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" data-slot="icon">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M12 16.5V9.75m0 0 3 3m-3-3-3 3M6.75 19.5a4.5 4.5 0 0 1-1.41-8.775 5.25 5.25 0 0 1 10.233-2.33 3 3 0 0 1 3.758 3.848A3.752 3.752 0 0 1 18 19.5H6.75Z" />
+                        </svg>
+                    </div>
+                    <span id="about-subtitle1">Push to deploy</span>
+                </dt>
+                <dd id="about-description1" class="mt-2 text-base/7 text-gray-600">Morbi viverra dui mi arcu sed. Tellus semper adipiscing suspendisse semper morbi. Odio urna massa nunc massa.</dd>
+            </div>
+            <div class="relative pl-16">
+                <dt class="text-base/7 font-semibold text-gray-900">
+                    <div class="absolute top-0 left-0 flex size-10 items-center justify-center rounded-lg bg-blue-800">
+                        <svg class="size-6 text-white" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M11.35 3.836c-.065.21-.1.433-.1.664 0 .414.336.75.75.75h4.5a.75.75 0 0 0 .75-.75 2.25 2.25 0 0 0-.1-.664m-5.8 0A2.251 2.251 0 0 1 13.5 2.25H15c1.012 0 1.867.668 2.15 1.586m-5.8 0c-.376.023-.75.05-1.124.08C9.095 4.01 8.25 4.973 8.25 6.108V8.25m8.9-4.414c.376.023.75.05 1.124.08 1.131.094 1.976 1.057 1.976 2.192V16.5A2.25 2.25 0 0 1 18 18.75h-2.25m-7.5-10.5H4.875c-.621 0-1.125.504-1.125 1.125v11.25c0 .621.504 1.125 1.125 1.125h9.75c.621 0 1.125-.504 1.125-1.125V18.75m-7.5-10.5h6.375c.621 0 1.125.504 1.125 1.125v9.375m-8.25-3 1.5 1.5 3-3.75" />
+                        </svg>
+
+                    </div>
+                    <span id="about-subtitle2">SSL certificates</span>
+                </dt>
+                <dd id="about-description2" class="mt-2 text-base/7 text-gray-600">Sit quis amet rutrum tellus ullamcorper ultricies libero dolor eget. Sem sodales gravida quam turpis enim lacus amet.</dd>
+            </div>
+            <div class="relative pl-16">
+                <dt class="text-base/7 font-semibold text-gray-900">
+                    <div class="absolute top-0 left-0 flex size-10 items-center justify-center rounded-lg bg-blue-800">
+                        <svg class="size-6 text-white" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 21h16.5M4.5 3h15M5.25 3v18m13.5-18v18M9 6.75h1.5m-1.5 3h1.5m-1.5 3h1.5m3-6H15m-1.5 3H15m-1.5 3H15M9 21v-3.375c0-.621.504-1.125 1.125-1.125h3.75c.621 0 1.125.504 1.125 1.125V21" />
+                        </svg>
+
+                    </div>
+                    <span id="about-subtitle3"> Simple queues</span>
+                </dt>
+                <dd id="about-description3" class="mt-2 text-base/7 text-gray-600">Quisque est vel vulputate cursus. Risus proin diam nunc commodo. Lobortis auctor congue commodo diam neque.</dd>
+            </div>
+            <div class="relative pl-16">
+                <dt class="text-base/7 font-semibold text-gray-900">
+                    <div class="absolute top-0 left-0 flex size-10 items-center justify-center rounded-lg bg-blue-800">
+                        <svg class="size-6 text-white" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M14.25 7.756a4.5 4.5 0 1 0 0 8.488M7.5 10.5h5.25m-5.25 3h5.25M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+                        </svg>
+
+                    </div>
+                    <span id="about-subtitle4"> Advanced security</span>
+                </dt>
+                <dd id="about-description4" class="mt-2 text-base/7 text-gray-600">Arcu egestas dolor vel iaculis in ipsum mauris. Tincidunt mattis aliquet hac quis. Id hac maecenas ac donec pharetra eget.</dd>
+            </div>
+        </dl>
+
     </div>
 </section>
 
