feat: add SEO and meta tags to head

--- a/public/index.html
+++ b/public/index.html
@@ -3,19 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Demy - Landing Page</title>
+    <title>Demy - La forma inteligente de gestionar tu academia</title>
+    <meta name="description" content="Demy es una plataforma web que digitaliza la gestión académica de academias presenciales: matrículas, pagos, asistencia y más desde un solo lugar.">
+    <meta name="keywords" content="gestión académica, software para academias, control de asistencia, matrícula online, pagos estudiantes, plataforma educativa">
+    <meta name="author" content="Demy Team">
+
     <!-- Google Font: Inter -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+
     <!-- Font Awesome CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
     <!-- TailwindCSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
+
     <!-- Estilos personalizados -->
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/hero.css">
-    <link rel="stylesheet" href="css/testimonials.css">
     <link rel="stylesheet" href="css/about-us.css">
-
+    <link rel="stylesheet" href="css/testimonials.css">
     <link rel="stylesheet" href="css/faq.css">
 </head>
 <body class="bg-white text-gray-800">
