fix: correct image path from contact section

--- a/public/index.html
+++ b/public/index.html
@@ -523,7 +523,7 @@
         <!-- Imagen a la derecha -->
         <div class="relative w-full lg:w-1/2 flex items-center justify-center mt-14 lg:mt-0">
             <img
-                    src="/public/assets/img/contact-us.png"
+                    src="assets/img/contact-us.png"
                     alt="Contact-image"
                     class="w-full h-auto">
         </div>
